# BELL_CustomPackageFramework

./: .gitignore  CPFConfig (copy).conf  CPFConfig.conf  CPFConfig_BakUp.conf  ChangeLog  DebianBuildScript  LICENSE  README.md  WebSites  configure.ac  control  copyright  cpf-0.2-1.deb
Dokumente/: #Bell_CustomPackageFramework_03_14082016.lyx#  #Bell_CustomPackageFramework_04_11112016.lyx#  Bell_CustomPackageFramework_03_14082016.aux  Bell_CustomPackageFramework_03_14082016.lof  Bell_CustomPackageFramework_03_14082016.lyx  Bell_CustomPackageFramework_03_14082016.lyx~  Bell_CustomPackageFramework_03_14082016.tex  Bell_CustomPackageFramework_03_14082016.toc  Bell_CustomPackageFramework_04_11112016.lyx  Bell_CustomPackageFramework_04_11112016.lyx~  License_for_Dokumente  Remeber  TESTBell_CustomPackageFramework_03_14082016.lyx  TESTBell_CustomPackageFramework_03_14082016.lyx~  testTex.tex
Dokumente/Bilder/: Anjuta_Galde_Pic_Save.xcf  DefaultDirectoryStructure.eps  PrefWin.eps  Schema_der_Schichten_der_grafischen_Benutzeroberflaeche.eps
Dokumente/ZEITPLAN/: Zeitplan_01.ods  Zeitplan_01_EXCEL.ods  Zeitplan_01_EXCEL.xls
desktop/: cpf  cpf.desktop
reference/: DatabaseLearning.py  myTestdb.db
src/: CPFConf.py  CPFConf.py~  CPFDatabase.py  CPFDatabase.py~  CPFFeedback.py  CPFFeedback.py~  CPFMassInstall.py  CPFMassInstall.py~  CPFWeb.py  CPFWeb.py~  Install_System.py  Install_System.py~  Install_UI.py  Install_UI.py~  Makefile.am  SystemInteraction.py  SystemInteraction.py~  UI_DE.ui  UI_DE.ui~  VTE_Interaction.py  VTE_Interaction.py~  cpf.py  cpf.py~  cpf.ui  cpf.ui~
